Restructured advanced tab of the settings dialog Fixed location of license file in the about dialog Updated changelog and install instructions Windows: - Corrected install location of data files - Install Qt libraries - Some GUI improvements
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@165 b624d157-de02-0410-bad0-e51aec6abb33

--- a/share/applications/keepassx.desktop
+++ b/share/applications/keepassx.desktop
@@ -5,7 +5,7 @@ GenericName=Cross Platform Password Manager
 GenericName[fr]=Gestionnaire de mot de passe
 GenericName[de]=Passwortverwaltung
 Exec=keepassx
-Icon=keepassx.xpm
+Icon=keepassx
 Comment=Cross Platform Password Manager
 Comment[fr]=Gestionnaire de mot de passe
 Comment[de]=Passwortverwaltung
