Associate KeePassX with *.kdb on Linux
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@224 b624d157-de02-0410-bad0-e51aec6abb33

--- a/share/applications/keepassx.desktop
+++ b/share/applications/keepassx.desktop
@@ -1,13 +1,14 @@
 [Desktop Entry]
 Name=KeePassX
 GenericName=Cross Platform Password Manager
-GenericName[fr]=Gestionnaire de mot de passe
 GenericName[de]=Passwortverwaltung
+GenericName[fr]=Gestionnaire de mot de passe
 Exec=keepassx
 Icon=keepassx
 Comment=Cross Platform Password Manager
-Comment[fr]=Gestionnaire de mot de passe
 Comment[de]=Passwortverwaltung
+Comment[fr]=Gestionnaire de mot de passe
 Terminal=false
 Type=Application
 Categories=Qt;Utility;
+MimeType=application/x-keepass
