Fixed: "KeepassX 0.3.3 fails to lock itself after Ctrl-V (autotype)" (Bug #2106604) Clear Klipper history on KDE4
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@230 b624d157-de02-0410-bad0-e51aec6abb33

--- a/share/applications/keepassx.desktop
+++ b/share/applications/keepassx.desktop
@@ -3,7 +3,7 @@ Name=KeePassX
 GenericName=Cross Platform Password Manager
 GenericName[de]=Passwortverwaltung
 GenericName[fr]=Gestionnaire de mot de passe
-Exec=keepassx
+Exec=keepassx %f
 Icon=keepassx
 Comment=Cross Platform Password Manager
 Comment[de]=Passwortverwaltung
@@ -11,4 +11,4 @@ Comment[fr]=Gestionnaire de mot de passe
 Terminal=false
 Type=Application
 Categories=Qt;Utility;
-MimeType=application/x-keepass
+MimeType=application/x-keepass;
