--- a/share/mimelnk/application/x-keepass.desktop
+++ b/share/mimelnk/application/x-keepass.desktop
@@ -3,6 +3,6 @@ Comment=KeePass database
 Comment[de]=KeePass Datenbank
 Hidden=false
 Icon=keepassx
-MimeType=application/x-keepass
-Patterns=*.kdb
+MimeType=application/x-keepass;
+Patterns=*.kdb;
 Type=MimeType
