--- a/share/applications/keepassx.desktop
+++ b/share/applications/keepassx.desktop
@@ -2,11 +2,13 @@
 Name=KeePassX
 GenericName=Cross Platform Password Manager
 GenericName[de]=Passwortverwaltung
+GenericName[es]=Gestor de contraseñas multiplataforma
 GenericName[fr]=Gestionnaire de mot de passe
 Exec=keepassx %f
 Icon=keepassx
 Comment=Cross Platform Password Manager
 Comment[de]=Passwortverwaltung
+Comment[es]=Gestor de contraseñas multiplataforma
 Comment[fr]=Gestionnaire de mot de passe
 Terminal=false
 Type=Application
