--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -127,6 +127,7 @@ set(keepassx_TRANSLATIONS
 	translations/keepassx-it_IT.ts
 	translations/keepassx-ja_JP.ts
 	translations/keepassx-ru_RU.ts
+	translations/keepassx-tr_TR.ts
 )
 
 IF( MINGW )
