Fix very obscure bug that corrupted the input of non-ascii characters. This is caused by calling QFileInfo::canonicalFilePath() before creating the QApplication object. So now the first thing we do is creating the QApplication object. This breaks the kde plugin, which we are not using anyway.
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@275 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -131,13 +131,13 @@ set(keepassx_TRANSLATIONS
 	translations/keepassx-tr_TR.ts
 )
 
-IF( MINGW )
-	SET(keepassx_SOURCES ${keepassx_SOURCES} main_win32.cpp)
-ELSEIF( APPLE )
-	SET(keepassx_SOURCES ${keepassx_SOURCES} main_macx.cpp)
-ELSE( MINGW )
-	SET(keepassx_SOURCES ${keepassx_SOURCES} main_unix.cpp)
-ENDIF( MINGW )
+#IF( MINGW )
+#	SET(keepassx_SOURCES ${keepassx_SOURCES} main_win32.cpp)
+#ELSEIF( APPLE )
+#	SET(keepassx_SOURCES ${keepassx_SOURCES} main_macx.cpp)
+#ELSE( MINGW )
+#	SET(keepassx_SOURCES ${keepassx_SOURCES} main_unix.cpp)
+#ENDIF( MINGW )
 
 IF( AUTOTYPE )
 	SET(keepassx_HEADERS ${keepassx_HEADERS}
