Changed bundle in Info.plist file for OS X to org.keepassx.keepassx
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@382 b624d157-de02-0410-bad0-e51aec6abb33

--- a/share/macx_bundle/Info.plist
+++ b/share/macx_bundle/Info.plist
@@ -37,7 +37,7 @@
     <string>6.0</string>
 
     <key>CFBundleIdentifier</key>
-    <string>com.apple.application-bundle</string>
+    <string>org.keepassx.keepassx</string>
 
     <key>CFBundleDocumentTypes</key>
     <array>
