--- a/share/macx_bundle/Info.plist
+++ b/share/macx_bundle/Info.plist
@@ -20,7 +20,7 @@
     <string>APPL</string>
 
     <key>CFBundleGetInfoString</key>
-    <string>KeePassX 0.4.3</string>
+    <string>KeePassX 0.4.4</string>
 
     <key>CFBundleSignature</key>
     <string>kpsx</string>
@@ -29,10 +29,10 @@
     <string>KeePassX</string>
 
     <key>CFBundleVersion</key>
-    <string>0.4.3</string>
+    <string>0.4.4</string>
 
     <key>CFBundleShortVersionString</key>
-    <string>0.4.3</string>
+    <string>0.4.4</string>
 
     <key>CFBundleName</key>
     <string>KeePassX</string>
@@ -41,7 +41,7 @@
     <string>6.0</string>
 
     <key>CFBundleIdentifier</key>
-    <string>org.keepassx.keepassx</string>
+    <string>com.apple.application-bundle</string>
 
     <key>CFBundleDocumentTypes</key>
     <array>
